--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "com.kakao.sdk:v2-user:2.11.0"
     implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.30.0'
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 }
