--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project_2nd_week"
         android:usesCleartextTraffic="true"
-        android:name=".KakaoLogin.KakaoApplication"
+        android:name=".Login.KakaoApplication"
         tools:targetApi="31">
 
 
         <activity
-            android:name=".KakaoLogin.LoginActicity"
+            android:name=".Login.LoginActicity"
             android:exported="true">
 
             <intent-filter>
