--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project_2nd_week"
         android:usesCleartextTraffic="true"
-        android:name=".Login.KakaoApplication"
+        android:name=".login.KakaoApplication"
         tools:targetApi="31">
 
 
         <activity
-            android:name=".Login.LoginActicity"
+            android:name=".login.LoginActicity"
             android:exported="true">
 
             <intent-filter>
@@ -31,6 +31,11 @@
 
 
         </activity>
+
+        <activity
+            android:name=".login.signup.SignUpActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Dialog" />
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
