--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,15 @@
 
 
 buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
     dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.1'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0"
     }
 }
-
 
 plugins {
     id 'com.android.application' version '7.2.1' apply false
